Complete Shopping-List
I referenced the "Dream Coding Academy" class and created my own [Shopping-List] with a strikethrough function added.

--- a/Making Shopping-List app/index.html
+++ b/Making Shopping-List app/index.html
@@ -18,7 +18,7 @@
 <body>
     <!--Title-->
     <section id="title">
-        <p class="title__name">Shopping-List</p>
+        <p class="title__name">Shopping-List🛒</p>
     </section>
     <!--Head-->
     <section id="head">
@@ -27,8 +27,11 @@
     </section>
     <!--Add List-->
     <section id="input-button">
-        <input type="text" class="input" placeholder="New List">
-        <input type="button" class="button" value="+ Add" onclick="onClick()">
+        <div class="input__container">
+            <input type="text" class="input" placeholder="New List">
+            <input type="button" class="button" value="+ Add" onclick="onClick()">
+        </div>
+        
         <!--<input type="submit" id="submit" value="+ Add">-->
     </section>
     <!--Main List-->
